adjust pdf slightly to prevent clipping

--- a/src/styles/pdf.scss
+++ b/src/styles/pdf.scss
@@ -1,14 +1,16 @@
 @import 'colours.scss';
 @import "sass-rem/rem";
-@import "constants.scss";
 
 body {
   font-size: 11px;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 100%;
-  max-width: $cut;
   text-align: justify;
   display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 
   h1 {
     font-size: 25px;
@@ -61,7 +63,6 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    display: flex;
     -webkit-box-pack: center;
 
     .standard_flex_item {
@@ -103,5 +104,12 @@ body {
 
   .footer {
     visibility: hidden;
+  }
+
+  .page {
+    width: 210mm;
+    min-height: 297mm;
+    padding: 20mm;
+    margin: 10mm auto;
   }
 }
